V1.4 - v1.023 修改了getNowShowingMovies和getComingSoonMovies方法，使用新的Repository方法名稱。        更新了searchMovies方法，使用新的Repository方法名稱searchMoviesByTitleOrDescription。        在createMovie和updateMovie方法中添加了createdAt和updatedAt字段的處理。        在deleteMovie方法中更新了updatedAt字段。        在convertToResponse方法中添加了createdAt和updatedAt字段的轉換。